Update SevenBag.java
partially a follow-up to 951973d